; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_inode.c_nfs_revalidate_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_inode.c_nfs_revalidate_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_server = type { i32 }
%struct.inode = type { i32 }
%struct.TYPE_2__ = type { i32 }

@NFS_INO_INVALID_ATTR = common dso_local global i32 0, align 4
@ESTALE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs_revalidate_inode(%struct.nfs_server* %0, %struct.inode* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nfs_server*, align 8
  %5 = alloca %struct.inode*, align 8
  store %struct.nfs_server* %0, %struct.nfs_server** %4, align 8
  store %struct.inode* %1, %struct.inode** %5, align 8
  %6 = load %struct.inode*, %struct.inode** %5, align 8
  %7 = call %struct.TYPE_2__* @NFS_I(%struct.inode* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @NFS_INO_INVALID_ATTR, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %27, label %13

13:                                               ; preds = %2
  %14 = load %struct.inode*, %struct.inode** %5, align 8
  %15 = call i32 @nfs_attribute_cache_expired(%struct.inode* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %27, label %17

17:                                               ; preds = %13
  %18 = load %struct.inode*, %struct.inode** %5, align 8
  %19 = call i64 @NFS_STALE(%struct.inode* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = load i32, i32* @ESTALE, align 4
  %23 = sub nsw i32 0, %22
  br label %25

24:                                               ; preds = %17
  br label %25

25:                                               ; preds = %24, %21
  %26 = phi i32 [ %23, %21 ], [ 0, %24 ]
  store i32 %26, i32* %3, align 4
  br label %31

27:                                               ; preds = %13, %2
  %28 = load %struct.nfs_server*, %struct.nfs_server** %4, align 8
  %29 = load %struct.inode*, %struct.inode** %5, align 8
  %30 = call i32 @__nfs_revalidate_inode(%struct.nfs_server* %28, %struct.inode* %29)
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %27, %25
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local %struct.TYPE_2__* @NFS_I(%struct.inode*) #1

declare dso_local i32 @nfs_attribute_cache_expired(%struct.inode*) #1

declare dso_local i64 @NFS_STALE(%struct.inode*) #1

declare dso_local i32 @__nfs_revalidate_inode(%struct.nfs_server*, %struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
